# sedidata

./: .gitignore  .rustfmt.toml  Cargo.toml  Champions.json  Loot.json  Masteries.json  Pipfile  README.md  Summoner.json  main.py  out.json  overview.txt
.cargo/: config.toml
.github/workflows/: ci.yml
api/client/: _util.py  api_constants.py  clientapi.py  loot.py
api/riot/: dragon.py  masteries.py  webapi.py
config/: league_path.txt
frontend/: loot.py
sedidata-server/: Cargo.toml
sedidata-server/src/: cache.rs  main.rs  model.rs  riot_api_client.rs
sedidata-tui/: Cargo.toml
sedidata-tui/src/: main.rs
sedidata-tui/src/model/: challenge.rs  champion.rs  champselect.rs  game.rs  ids.rs  loot.rs  mastery.rs  mod.rs  summoner.rs
sedidata-tui/src/service/: data_manager.rs  lookup.rs  mod.rs  util.rs
sedidata-tui/src/service/gameapi/: client.rs  lcu_client.rs  live_game_client.rs  mod.rs  (+1 more)
sedidata-tui/src/ui/: async_data.rs  menu.rs  mod.rs  repl.rs
src/: main.rs  test.rs
src/controller/: data_manager.rs  mod.rs
src/gameapi/: client.rs
src/model/: cache_wrapper.rs  challenge.rs  champion.rs  champselect.rs  games.rs  ids.rs  loot.rs  mastery.rs  mod.rs  summoner.rs
src/service/: data_manager.rs  dictionary.rs  lookup.rs  mod.rs  util.rs
src/service/gameapi/: client.rs
src/ui/: menu.rs  mod.rs  repl.rs
src/ui/views/: collection.rs  game.rs  loot.rs  mastery.rs  mod.rs  progress.rs  summoner.rs
src/view/: inventory.rs  mod.rs  repl.rs
src/view/subviews/: basic.rs  challenges.rs  champselect.rs  games.rs  inventory.rs  loot.rs  mod.rs
(+26 files in other folders)
