[package]
name = "sedidata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.26.1"
itertools = "0.14.0"
json = "0.12.4"
once_cell = "1.17.1"
ratatui = "0.26"
reqwest = { version = "0.11.14", features = ["blocking"] }
